--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,12 @@ jobs:
       - name: Inspect Python environment
         run: pip list
 
+      - name: Build and launch sqld
+        id: launch_sqld
+        run: |
+          docker build -f Dockerfile -t sqld .
+          docker run -p 8080:8080 --rm -d sqld
+
       - name: Run tests
         id: pytest
         run: |
@@ -62,7 +68,7 @@ jobs:
 
       - name: Generate coverage reports
         id: generate_coverage_report
-        if: always()
+        if: always() && steps.launch_sqld.outcome == 'success'
         run: |
           # Generate reports
           coverage html --data-file=coverage/.coverage -d coverage/html
