--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,8 @@ markers = ["organization: marks tests related to Organization endpoint tests"]
 [tool.coverage.run]
 source = ["aisql"]
 relative_files = true
-# concurrency = ["multiprocessing", "thread"]
-# parallel = true
+concurrency = ["multiprocessing", "thread"]
+parallel = true
 
 # [tool.coverage.paths]
 # source = ["src"]
